--- a/application-express/espace-utilisateur/enseignants/maxime/2.2.html
+++ b/application-express/espace-utilisateur/enseignants/maxime/2.2.html
@@ -3,7 +3,7 @@
 	<head>
 		<title>Impress Tutorial</title>
 		<meta http-equiv="Content-Type" content="text/html; charset=UTF-8">	
-		<link href="./styles.css" rel="stylesheet" />
+		<link href="./static/stylesheets/styles.css" rel="stylesheet" />
 	</head>
 	<body>
 		<div id="impress">
@@ -37,6 +37,6 @@
 			</div>
 
 		</div>
-		<script type="text/javascript" src="impress.js"></script>
+		<script type="text/javascript" src="./static/javascripts/impress.js"></script>
 	</body>
 </html>
