--- a/application-express/espace-utilisateur/enseignants/maxime/2.2.html
+++ b/application-express/espace-utilisateur/enseignants/maxime/2.2.html
@@ -1,11 +1,12 @@
 <!doctype html>
 <html>
 	<head>
-		<title>Impress Tutorial</title>
+		<title>Presentation Impress</title>
 		<meta http-equiv="Content-Type" content="text/html; charset=UTF-8">	
 		<link href="./static/stylesheets/styles.css" rel="stylesheet" />
 	</head>
 	<body>
+	
 		<div id="impress">
 
 			<div class="step" data-x="0" data-y="0">
@@ -38,5 +39,6 @@
 
 		</div>
 		<script type="text/javascript" src="./static/javascripts/impress.js"></script>
+		<script>impress().init();</script>
 	</body>
 </html>
