--- a/application-express/espace-utilisateur/enseignants/maxime/2.2.html
+++ b/application-express/espace-utilisateur/enseignants/maxime/2.2.html
@@ -3,7 +3,7 @@
 	<head>
 		<title>Presentation Impress</title>
 		<meta http-equiv="Content-Type" content="text/html; charset=UTF-8">	
-		<link href="./static/stylesheets/styles.css" rel="stylesheet" />
+		<link href="/static/stylesheets/styles.css" rel="stylesheet" />
 	</head>
 	<body>
 	
@@ -38,7 +38,7 @@
 			</div>
 
 		</div>
-		<script type="text/javascript" src="./static/javascripts/impress.js"></script>
+		<script type="text/javascript" src="/static/javascripts/impress.js"></script>
 		<script>impress().init();</script>
 	</body>
 </html>
