on va utiliser htmlparser2 pour manipuler les documents source... je pense

--- a/application-express/espace-utilisateur/enseignants/jberger/presentation-demo.html
+++ b/application-express/espace-utilisateur/enseignants/jberger/presentation-demo.html
@@ -1,8 +1,5 @@
-<!doctype html>
-
 <!--
-
-    Une présentation simple impress.js utilisé pour le prototype
+	@titre = Une présentation simple impress.js utilisé pour le prototype
 
                                ____                  
                             _.' :  `._               
