visualisation est rétablie dans les pages de consultation et d'édition ( l'éditeur reste visible, maintenant) - beautified la présentation.

--- a/application-express/espace-utilisateur/enseignants/maxime/2.2.html
+++ b/application-express/espace-utilisateur/enseignants/maxime/2.2.html
@@ -1,6 +1,7 @@
 <!doctype html>
 <html>
 	<head>
+	        <meta name="viewport" content="width=1024"/>   
 		<title>Presentation Impress</title>
 		<meta http-equiv="Content-Type" content="text/html; charset=UTF-8">	
         <link href="/static/stylesheets/styles.css" rel="stylesheet" />
@@ -13,11 +14,11 @@
 				Premiere acétate!
 			</div>
 
-			<div class="step" data-x="700" data-y="0">
+			<div class="step" data-x="1800" data-y="0">
 				 D'une présentation impress.js	
 			</div>
 
-			<div class="step" data-x="500" data-y="-400">
+			<div class="step" data-x="3600" data-y=0 > 
 				Pour le système de prise de note
 			</div>
 
@@ -25,16 +26,16 @@
 				et on va mettre ceci en fullscreen!
 			</div>
 
-			<div class="step" data-x="0" data-y="-800" data-rotate="90">
-				C'est une rotation .
+			<div class="step" data-x="6000" data-y="-800" data-rotate="45">
+				C'est une rotation 
 			</div>
 
-			<div class="step" data-x="-100" data-y="-800" data-rotate-x="60" data-rotate-y="60" data-rotate-z="30">
+			<div class="step" data-x="-500" data-y="-800">
 				et une transition 3D
 			</div>
 
-			<div class="step" data-x="-2600" data-y="-800" data-rotate-x="30" data-rotate-y="-60" data-rotate-z="90" data-scale="4">
-				Encore plus de rotation !
+			<div class="step" data-x="-550" data-scale="550">
+		             Et de l'accélération 
 			</div>
 
 		</div>
