--- a/application-express/espace-utilisateur/enseignants/maxime/2.2.html
+++ b/application-express/espace-utilisateur/enseignants/maxime/2.2.html
@@ -6,8 +6,8 @@
 		<meta http-equiv="Content-Type" content="text/html; charset=UTF-8">	
         <link href="/static/stylesheets/styles.css" rel="stylesheet" />
 	</head>
-	<body>
-	
+	<body>	
+	     <div id="jmpress">
 		<div id="impress">
 
 			<div class="step" data-x="0" data-y="0">
@@ -31,14 +31,15 @@
 			</div>
 
 			<div class="step" data-x="-500" data-y="-800">
-				et une transition 3D
+				et une autre rotation...
 			</div>
 
 			<div class="step" data-x="-550" data-scale="550">
-		             Et de l'accélération 
+		             Et de l'accélération! 
 			</div>
 
 		</div>
+	     </div>
 		<script type="text/javascript" src="/static/javascripts/impress.js"></script>
 		<script>impress().init();</script>
 	</body>
