--- a/application-express/espace-utilisateur/enseignants/jberger/presentation-demo-backup.html
+++ b/application-express/espace-utilisateur/enseignants/jberger/presentation-demo-backup.html
@@ -3,7 +3,7 @@
 <div class="step slide" data-x="-1000" data-y="-1500">
     <h1>INF4375 - Paradigmes des échanges internet</h1>
     <h2>Introduction au XML</h2>
-    <p>Jacques Bergeroon</p>
+    <p>Jacques Berger</p>
 </div>
 
 <div class="step slide" data-x="0" data-y="-1500">
