--- a/application-express/espace-utilisateur/enseignants/jberger/presentation-demo-backup.html
+++ b/application-express/espace-utilisateur/enseignants/jberger/presentation-demo-backup.html
@@ -1,4 +1,4 @@
-<!-- @titre = Une présentation simple impress.js 'a 8 pages utilisé pour le prototype -->
+<!-- @titre = Une présentation simple impress.js à 8 pages utilisé pour le prototype -->
 
 <div class="step slide" data-x="-1000" data-y="-1500">
     <h1>INF4375 - Paradigmes des échanges internet</h1>
