--- a/application-express/espace-utilisateur/enseignants/maxime/2.2.html
+++ b/application-express/espace-utilisateur/enseignants/maxime/2.2.html
@@ -8,17 +8,17 @@
 	</head>
 	<body>	
 	     <div id="jmpress">
-		<div id="impress">
-			<div class="step slide" data-x="0" data-y="0">
-				Premiere acétate!
+		  <div id="impress">
+			<div id="first" class="step " data-x="0" data-y="0">
+			    deuxieme acetate....
 			</div>
-			<div class="step slide" data-x="1800" data-y="0">
+			<div class="step" data-x="1800" data-y="0">
 				D'une présentation impress.js	
 			</div>
-			<div class="step slide" data-x="3600" data-y=0 > 
+			<div class="step" data-x="3600" data-y=0 > 
 				Pour le système de prise de note
 			</div>
-			<div class="step slide" data-x="500" data-y="-800" data-scale="0.5">
+			<div class="step" data-x="500" data-y="-800" data-scale="0.5">
 				et on va mettre ceci en fullscreen!
 			</div>
 			<div class="step slide" data-x="6000" data-y="-800" data-rotate="45">
@@ -27,12 +27,12 @@
 			<div class="step slide" data-x="-500" data-y="-800">
 				et une autre rotation...
 			</div>
-			<div class="step slide" data-x="-550" data-scale="550">
-		             Et de l'accélération! 
+			<div id="last" class="step slide" data-x="-550" data-scale="550">
+		             Premiere acétate... 
 			</div>
-		</div>
+	  	  </div>
 	     </div>
 		<script type="text/javascript" src="/static/javascripts/impress.js"></script>
-		<script>impress().init();</script>
+		<script>impress().init(); impress().goto("#first");</script>
 	</body>
 </html>
