la présentation miniature n'entre plus en conflit avec l'interface (le texte ne vole plus dans l,interface principale du site

--- a/application-express/espace-utilisateur/enseignants/maxime/2.2.html
+++ b/application-express/espace-utilisateur/enseignants/maxime/2.2.html
@@ -10,25 +10,25 @@
 	     <div id='jmpress'>
 		  <div id='impress'>
 			<div id='first' class='step ' data-x='0' data-y='0'>
-			 Première acétate. 
+			 <p>Première acétate. </p>
 			</div>
 			<div class='step slide' data-x='1800' data-y='0'>
-			 D'une présentation impress.js 
+			<p>D'une présentation impress.js </p>
 			</div>
 			<div class='step slide' data-x='3600' data-y=0 > 
-			 Pour le système de prise de note 
+			<p>Pour le système de prise de note </p>
 			</div>
 			<div class='step slide' data-x='500' data-y='-800' data-scale='0.5'>
-				 et on va mettre ceci en fullscreen! 
+			<p>et on va mettre ceci en fullscreen! </p>
 			</div>
 			<div class='step slide' data-x='6000' data-y='-800' data-rotate='45'>
-				 C'est une rotation  
+			<p>C'est une rotation  </p>
 			</div>
 			<div class='step slide' data-x='-500' data-y='-800'>
-			 et une autre rotation... 
+			<p>et une autre rotation... </p>
 			</div>
 			<div id='last' class='step slide' data-x='-550' data-z='999999200000' data-scale='550'>
-		          Accélération! 
+			<p>Accélération! </p>
 			</div>
 	  	  </div>
 	     </div>
