--- a/application-express/espace-utilisateur/enseignants/maxime/2.2.html
+++ b/application-express/espace-utilisateur/enseignants/maxime/2.2.html
@@ -4,13 +4,14 @@
 	    <meta name='viewport' content='width=1024'/>   
 		<title>Presentation Impress</title>
 		<meta http-equiv='Content-Type' content='text/html; charset=UTF-8'>	
-        <link href='/static/stylesheets/styles.css' rel='stylesheet' />
+		<style>	p {font-size:70px;}
+		</style>
 	</head>
 	<body>	
 	     <div id='jmpress'>
 		  <div id='impress'>
 			<div id='first' class='step ' data-x='0' data-y='0'>
-			 <p>Première acétate. </p>
+			 <p >Première acétate. </p>
 			</div>
 			<div class='step slide' data-x='1800' data-y='0'>
 			<p>D'une présentation impress.js </p>
