--- a/application-express/espace-utilisateur/enseignants/maxime/2.2.html
+++ b/application-express/espace-utilisateur/enseignants/maxime/2.2.html
@@ -34,6 +34,7 @@
 	  	  </div>
 	     </div>
 		 <script type='text/javascript' src='/static/javascripts/impress.js'></script>
+		 <script type='text/javascript' src='/static/javascripts/jquery-1.10.1.min.js'></script>
 		<script>impress().init();</script>
 	</body>
 </html>
