fonction présentation mergé , pas testé l'éditeur @marco : check out pres.js , edit-pres.js : also un bug de #sortable, pour le reste le serveur plante pas.

--- a/application-express/espace-utilisateur/enseignants/maxime/2.2.html
+++ b/application-express/espace-utilisateur/enseignants/maxime/2.2.html
@@ -4,32 +4,32 @@
 	    <meta name='viewport' content='width=1024'/>   
 		<title>Presentation Impress</title>
 		<meta http-equiv='Content-Type' content='text/html; charset=UTF-8'>	
-		<style>	p {font-size:70px;}
+		<style type="text/css" scoped>	.para {font-size:70px;}
 		</style>
 	</head>
 	<body>	
 	     <div id='jmpress'>
 		  <div id='impress'>
 			<div id='first' class='step ' data-x='0' data-y='0'>
-			 <p >Première acétate. </p>
+			 <p class="para">Première acétate. </p>
 			</div>
 			<div class='step slide' data-x='1800' data-y='0'>
-			<p>D'une présentation impress.js </p>
+			<p class="para">D'une présentation impress.js </p>
 			</div>
 			<div class='step slide' data-x='3600' data-y=0 > 
-			<p>Pour le système de prise de note </p>
+			<p class="para">Pour le système de prise de note </p>
 			</div>
 			<div class='step slide' data-x='500' data-y='-800' data-scale='0.5'>
-			<p>et on va mettre ceci en fullscreen! </p>
+			<p class="para">et on va mettre ceci en fullscreen! </p>
 			</div>
 			<div class='step slide' data-x='6000' data-y='-800' data-rotate='45'>
-			<p>C'est une rotation  </p>
+			<p class="para">C'est une rotation  </p>
 			</div>
 			<div class='step slide' data-x='-500' data-y='-800'>
-			<p>et une autre rotation... </p>
+			<p class="para">et une autre rotation... </p>
 			</div>
 			<div id='last' class='step slide' data-x='-550' data-z='999999200000' data-scale='550'>
-			<p>Accélération! </p>
+			<p class="para">Accélération! </p>
 			</div>
 	  	  </div>
 	     </div>
