--- a/application-express/espace-utilisateur/enseignants/jberger/INF4375/INF4375-Express.html
+++ b/application-express/espace-utilisateur/enseignants/jberger/INF4375/INF4375-Express.html
@@ -1,5 +1,7 @@
 <!-- @titre = INF4375 Express -->
 
-<div class="step slide" data-x="-1000" data-y="-1500">
+<div class="step slide" data-x="-1000" data-y="-1500">nouvelle page</div><div class="step slide" data-x="0" data-y="-1500">
     <p><b>INF4375 Express</b></p>
+</div><div class="step slide" data-x="1000" data-y="-1500">
+<p>nouvelle page</p>
 </div>
