Modification d'interface : - Breadcrumb du path dans l'Arborescence se met a jour proprement quand on   load un page. - Retirer le numero des page sur les thumbnails de la page   consulter une presentation - Le file chooser pour importer une liste ne s'affiche plus sur un gros   bouton inutile. - Sur la page d'edition, remplacer les alerts de javascript par des alerts   de bootstrap. - Changer 'Exporter une presentation' pour 'Exporter' sur la page de   consulter une presentation

--- a/application-express/espace-utilisateur/enseignants/jberger/presentation-demo-backup.html
+++ b/application-express/espace-utilisateur/enseignants/jberger/presentation-demo-backup.html
@@ -1,10 +1,8 @@
 <!-- @titre = Une présentation simple impress.js à 8 pages utilisé pour le prototype -->
 
-<div class="step slide" data-x="-1000" data-y="-1500">
-    <h1>INF4375 - Paradigmes des échanges internet</h1>
+<div class="step slide" data-x="-1000" data-y="-1500"><h1>INF4375 - Paradigmes des échanges internet</h1>
     <h2>Introduction au XML</h2>
-    <p>Jacques Berger</p>
-</div>
+    Jacques Berger</div>
 
 <div class="step slide" data-x="0" data-y="-1500">
     <h3>Objectifs</h3>
@@ -16,33 +14,33 @@
     </ul>
 </div>
 
-<div class="step slide" data-x="1000" data-y="-1500">
+<div class="step slide" data-x="2000" data-y="-1500">
     <h3>Objectifs</h3>
     <p>Aucun</p>
 </div>
 
-<div class="step slide" data-x="2000" data-y="-1500">
+<div class="step slide" data-x="3000" data-y="-1500">
     <h3>XML</h3>
     <p>Extensible Markup Language</p>
     <p>C'est vraiment le «fun»</p>
 </div>
 
-<div id="title" class="step" data-x="0" data-y="0" data-scale="4">
+<div id="title" class="step" data-x="1000" data-y="0" data-scale="4">
     <span class="try">then you should try</span>
     <h1>impress.js<sup>*</sup></h1>
     <span class="footnote"><sup>*</sup> no rhyme intended</span>
 </div>
 
-<div id="its" class="step" data-x="850" data-y="3000" data-rotate="90" data-scale="5">
+<div id="its" class="step" data-x="1850" data-y="3000" data-rotate="90" data-scale="5">
     <p>It's a <strong>presentation tool</strong> <br>
     inspired by the idea behind <a href="http://prezi.com">prezi.com</a> <br>
     and based on the <strong>power of CSS3 transforms and transitions</strong> in modern browsers.</p>
 </div>
 
-<div id="big" class="step" data-x="3500" data-y="2100" data-rotate="180" data-scale="6">
+<div id="big" class="step" data-x="4500" data-y="2100" data-rotate="180" data-scale="6">
     <p>visualize your <b>big</b> <span class="thoughts">thoughts</span></p>
 </div>
 
-<div id="tiny" class="step" data-x="2825" data-y="2325" data-z="-3000" data-rotate="300" data-scale="1">
+<div id="tiny" class="step" data-x="3825" data-y="2325" data-z="-3000" data-rotate="300" data-scale="1">
     <p>and <b>tiny</b> ideas</p>
 </div>
