--- a/application-express/espace-utilisateur/enseignants/jberger/presentation-demo-backup.html
+++ b/application-express/espace-utilisateur/enseignants/jberger/presentation-demo-backup.html
@@ -1,46 +1,37 @@
-<!-- @titre = Une présentation simple impress.js à 8 pages utilisé pour le prototype -->
+<!-- @titre = Notes de cours: une présentation recursive -->
 
-<div class="step slide" data-x="-1000" data-y="-1500"><h1>INF4375 - Paradigmes des échanges internet</h1>
-    <h2>Introduction au XML</h2>
-    Jacques Berger</div>
+<div class="step slide" data-x="-2000" data-y="-1500">
+    <p>On est dans une age de guerre civile!</p>
+</div>
+
+<div class="step slide" data-x="-1000" data-y="-1500">
+    <p>Les Rebelles avec leurs armes libres ...</p>
+</div>
 
 <div class="step slide" data-x="0" data-y="-1500">
-    <h3>Objectifs</h3>
-    <ul>
-        <li>L'utilité de l'XML</li>
-        <li>Vocab</li>
-        <li>blah blah blee</li>
-        <li>les ouefs</li>
-    </ul>
+    <p> ... s'opposent aux forces obscures de l'Empire!</p>
+</div>
+
+<div class="step slide" data-x="1000" data-y="-1500">
+    <p>Mais finalement, les Rebelles ont une nouvelle arme exceptionnelle</p>
 </div>
 
 <div class="step slide" data-x="2000" data-y="-1500">
-    <h3>Objectifs</h3>
-    <p>Aucun</p>
-</div>
-
-<div class="step slide" data-x="3000" data-y="-1500">
-    <h3>XML</h3>
-    <p>Extensible Markup Language</p>
-    <p>C'est vraiment le «fun»</p>
+    <span>... cette arme est ...</span>
 </div>
 
 <div id="title" class="step" data-x="1000" data-y="0" data-scale="4">
-    <span class="try">then you should try</span>
-    <h1>impress.js<sup>*</sup></h1>
-    <span class="footnote"><sup>*</sup> no rhyme intended</span>
+    <h1>Notes de cours</h1>    
 </div>
 
-<div id="its" class="step" data-x="1850" data-y="3000" data-rotate="90" data-scale="5">
-    <p>It's a <strong>presentation tool</strong> <br>
-    inspired by the idea behind <a href="http://prezi.com">prezi.com</a> <br>
-    and based on the <strong>power of CSS3 transforms and transitions</strong> in modern browsers.</p>
+<div id="its" class="step" data-x="1000" data-y="3000">
+    <p>Un <strong>système social</strong> pour créer, visualiser des présentations</p>
 </div>
 
-<div id="big" class="step" data-x="4500" data-y="2100" data-rotate="180" data-scale="6">
+<div id="big" class="step" data-x="1000" data-y="4000">
     <p>visualize your <b>big</b> <span class="thoughts">thoughts</span></p>
 </div>
 
-<div id="tiny" class="step" data-x="3825" data-y="2325" data-z="-3000" data-rotate="300" data-scale="1">
+<div id="tiny" class="step" data-x="1000" data-y="5000">
     <p>and <b>tiny</b> ideas</p>
 </div>
