--- a/application-express/espace-utilisateur/enseignants/jberger/presentation-demo-backup.html
+++ b/application-express/espace-utilisateur/enseignants/jberger/presentation-demo-backup.html
@@ -1,7 +1,8 @@
 <!-- @titre = Notes de cours: une présentation recursive -->
 
 <div class="step slide" data-x="-2000" data-y="-1500">
-    <p>On est dans une age de guerre civile!</p>
+    <p>On est dans une age de guerre civile!<sup>*</sup></p>
+    <p class="footnote"><sup>*</sup> Les developpeurs de Notes de cours sont des pacifistes et ne ...</p>
 </div>
 
 <div class="step slide" data-x="-1000" data-y="-1500">
@@ -25,7 +26,7 @@
 </div>
 
 <div id="its" class="step" data-x="1000" data-y="3000">
-    <p>Un <strong>système social</strong> pour créer, visualiser des présentations</p>
+    <p>Un <strong>système social</strong> pour créer et visualiser des présentations</p>
 </div>
 
 <div id="big" class="step" data-x="1000" data-y="4000">
