la première partie de la présentation pour montre l`idée

--- a/application-express/espace-utilisateur/enseignants/jberger/presentation-demo-backup.html
+++ b/application-express/espace-utilisateur/enseignants/jberger/presentation-demo-backup.html
@@ -1,16 +1,21 @@
 <!-- @titre = Notes de cours: une présentation recursive -->
 
 <div class="step slide" data-x="-2000" data-y="-1500">
-    <p>On est dans une age de guerre civile!<sup>*</sup></p>
-    <p class="footnote"><sup>*</sup> Les developpeurs de Notes de cours sont des pacifistes et ne ...</p>
+    <p>On est dans une age de guerre civile!<sup>*</sup><br>
+    <img src="/static/images/gabarit/battaille.png"></p>
+    </p>
+    <p class="footnote"><sup>*</sup> Les developpeurs de <em>Notes de cours</em> sont des pacifistes et ne suportent pas l'idée de guerre</p>
 </div>
 
 <div class="step slide" data-x="-1000" data-y="-1500">
-    <p>Les Rebelles avec leurs armes libres ...</p>
+    <p>Les Rebelles, armés de<br> logiciels libres...<br>
+    <img src="/static/images/gabarit/etudiant-qui-etude.gif"></p>
+    
 </div>
 
 <div class="step slide" data-x="0" data-y="-1500">
-    <p> ... s'opposent aux forces obscures de l'Empire!</p>
+    <p> ... s'opposent aux <br>forces obscures de l'Empire!</p>
+    <img src="/static/images/gabarit/comic.jpg">
 </div>
 
 <div class="step slide" data-x="1000" data-y="-1500">
@@ -22,17 +27,61 @@
 </div>
 
 <div id="title" class="step" data-x="1000" data-y="0" data-scale="4">
-    <h1>Notes de cours</h1>    
+    <h1>Notes de cours</h1>
+    <img src="/static/images/gabarit/r2d2-projection.jpg">
 </div>
 
-<div id="its" class="step" data-x="1000" data-y="3000">
+<div class="step" data-x="1000" data-y="3000">
     <p>Un <strong>système social</strong> pour créer et visualiser des présentations</p>
 </div>
 
-<div id="big" class="step" data-x="1000" data-y="4000">
-    <p>visualize your <b>big</b> <span class="thoughts">thoughts</span></p>
+<div class="step" data-x="1000" data-y="4000">
+    <h3>Besoin initial</h3>
+    <ul>
+        <li>Portabilite'</li>
+        <li>Besoin 2</li>
+        <li>Besoin 3</li>
+    </ul>
 </div>
 
-<div id="tiny" class="step" data-x="1000" data-y="5000">
-    <p>and <b>tiny</b> ideas</p>
+<div class="step" data-x="1000" data-y="5000">
+    <h3>But</h3>
+    <p>Pouvoir rediger les presentation dans un format simple, portable et libre</p>
+    <h3>Solution</h3>
+    <p>entre xml et markdown on trouve</p>
+    </p>
+</div>
+
+<div id="html" class="step" data-x="1000" data-y="6800" data-z="-6000">
+    <h3></h3>
+    <p></p>
+    <h3>Solution</h3>
+    <h3>HTML</h3>
+</div>
+
+<div class="step gauche" data-x="0" data-y="4000" data-z="-3000">
+    <h3>Fonctionnalités</h3>
+    <ul>
+        <li>Pour les Rebelles</li>
+        <li></li>
+        <li></li>
+    </ul>
+</div>
+
+<div class="step gauche" data-x="0" data-y="4000" data-z="-3000">
+    <h3>Fonctionnalités</h3>
+    <ul>
+        <li></li>
+        <li>Pour les esclaves de l'Empire</li>
+        <li></li>
+    </ul>
+</div>
+
+<div class="step gauche" data-x="0" data-y="4000" data-z="-3000">
+    <h3>Fonctionnalités</h3>
+    <ul>
+        <li></li>
+        <li></li>
+        <li>Pour les ... err ... administrateurs</li>
+    </ul>
 </div>
