--- a/application-express/espace-utilisateur/enseignants/jberger/presentation-demo-backup.html
+++ b/application-express/espace-utilisateur/enseignants/jberger/presentation-demo-backup.html
@@ -1,17 +1,12 @@
 <!-- @titre = Notes de cours: une présentation recursive -->
 
-<div class="step slide" data-x="-2000" data-y="-1500">
-    <p>On est dans une age de guerre civile!<sup>*</sup><br>
-    <img src="/static/images/gabarit/battaille.png"></p>
-    </p>
-    <p class="footnote"><sup>*</sup> Les developpeurs de <em>Notes de cours</em> sont des pacifistes et ne suportent pas l'idée de guerre</p>
-</div>
-
-<div class="step slide" data-x="-1000" data-y="-1500">
-    <p>Les Rebelles, armés de<br> logiciels libres...<br>
-    <img src="/static/images/gabarit/etudiant-qui-etude.gif"></p>
+<div class="step slide" data-x="-2000" data-y="-1500"><span>On est dans un âge de guerre civile!*<br></span><h6><span>
+    <img title="Image: http://localhost:3000/static/images/gabarit/battaille.png" src="http://localhost:3000/static/images/gabarit/battaille.png" alt=""></span>
     
-</div>
+    * Les developpeurs de Notes de cours sont des pacifistes et ne suportent pas l'idée de guerre</h6></div>
+
+<div class="step slide" data-x="-1000" data-y="-1500"><span>Les Rebelles, armés de<br> logiciels libres...<br>
+    <img title="Image: http://localhost:3000/static/images/gabarit/etudiant-qui-etude.gif" src="http://localhost:3000/static/images/gabarit/etudiant-qui-etude.gif" alt=""></span></div>
 
 <div class="step slide" data-x="0" data-y="-1500">
     <p> ... s'opposent aux <br>forces obscures de l'Empire!</p>
@@ -27,26 +22,19 @@
     <img src="/static/images/gabarit/r2d2-projection.jpg">
 </div>
 
-<div class="step" data-x="1000" data-y="3000">
-    <p>Un <strong>système social</strong> pour créer et visualiser des présentations</p>
-</div>
+<div class="step" data-x="1000" data-y="3000"><span>Un système social pour créer et visualiser des présentations.</span></div>
 
-<div class="step" data-x="1000" data-y="4000">
-    <h3>Besoin initial</h3>
+<div class="step" data-x="1000" data-y="4000"><h3>Besoin initial</h3>
     <ul>
-        <li>Portabilite'</li>
-        <li>Besoin 2</li>
-        <li>Besoin 3</li>
-    </ul>
-</div>
+        <li>Portabilité</li>
+        <li>Facilité d'utilisation<br></li>
+        
+    </ul></div>
 
-<div class="step" data-x="1000" data-y="5000">
-    <h3>But</h3>
-    <p>Pouvoir rediger les presentation dans un format simple, portable et libre</p>
+<div class="step" data-x="1000" data-y="5000"><h3>But</h3>
+    Pouvoir rédiger les présentations dans un format simple, portable et libre.
     <h3>Solution</h3>
-    <p>entre xml et markdown on trouve</p>
-    </p>
-</div>
+    Entre xml et markdown on trouve...</div>
 
 <div id="html" class="step" data-x="1000" data-y="6800" data-z="-6000">
     <h3></h3>
@@ -55,29 +43,21 @@
     <h3>HTML</h3>
 </div>
 
-<div class="step gauche" data-x="0" data-y="4000" data-z="-3000">
-    <h3>Fonctionnalités</h3>
+<div class="step gauche" data-x="0" data-y="4000" data-z="-3000"><h3>Fonctionnalités</h3>
     <ul>
-        <li>Pour les Rebelles</li>
-        <li></li>
-        <li></li>
-    </ul>
-</div>
+        <li>Pour les soldats de l'Empire (les enseignants)</li><li></li><li></li>
+        </ul></div>
 
-<div class="step gauche" data-x="0" data-y="4000" data-z="-3000">
-    <h3>Fonctionnalités</h3>
+<div class="step gauche" data-x="0" data-y="4000" data-z="-3000"><h3>Fonctionnalités</h3>
     <ul>
+        <li><br>&nbsp;</li>
+        <li>Pour les rebelles (les étudiants)</li>
         <li></li>
-        <li>Pour les esclaves de l'Empire</li>
-        <li></li>
-    </ul>
-</div>
+    </ul></div>
 
-<div class="step gauche" data-x="0" data-y="4000" data-z="-3000">
-    <h3>Fonctionnalités</h3>
+<div class="step gauche" data-x="0" data-y="4000" data-z="-3000"><h3>Fonctionnalités</h3>
     <ul>
+        <li><br>&nbsp;</li>
         <li></li>
-        <li></li>
-        <li>Pour les ... err ... administrateurs</li>
-    </ul>
-</div>
+        <li>Pour l'empereur (l'administrateur)</li>
+    </ul></div>
